Now the ticket can be continuous. The SQL scripts are updated so that the field endDate is not anymore null. Fix a bug in the admin/jsp/import.jsp JSP. Add two dates in the view tld for formatting Silverpeas dates according to the date patterns in use in Silverpeas (and that depends on the user language)

--- a/config-core/src/main/config/properties/com/silverpeas/external/filesharing/multilang/fileSharingBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/external/filesharing/multilang/fileSharingBundle_en.properties
@@ -57,6 +57,7 @@ fileSharing.sizeFile = Size
 fileSharing.downloadLink = Link to the file to download
 fileSharing.ticketNotValid = This ticket is not valid
 fileSharing.afficherCalendrier = Calendar
-fileSharing.maxValue = must be between 1 and 100
+fileSharing.maxValue = must be between
 fileSharing.shareFile = share the following file:
 fileSharing.downloadFileHelp = To directly download the file,<br/> do a <b>right click then Save as... </b>
+fileSharing.continuous = Continuous
