--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -283,3 +283,7 @@ GML.user.type.G = Gast
 
 GML.notification.subject = Subject
 GML.notification.message = Message
+
+GML.mandatory = obligatorisch
+
+GML.and = und
