--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -288,3 +288,7 @@ GML.notification.message = Message
 GML.user.online = Online
 GML.user.online.for = Online for
 GML.user.offline = Offline
+
+GML.mandatory = Mandatory
+
+GML.and = and
