--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
@@ -84,7 +84,7 @@ GML.firstName                                           = Pr\u00e9nom
 
 GML.groupe						= Groupe
 GML.groupes						= Groupes
-GML.guest						= Invit\u00E9
+GML.guest						= Invit\u00e9
 
 GML.head						= Ent\u00eate
 GML.help						= Aide
@@ -277,19 +277,23 @@ GML.personalSpace = Espace personnel
 GML.linkTo = R\u00e9f\u00e9rencer
 
 GML.or = ou
-GML.galleries = Phototh\u00E8ques
-GML.applet.dnd.alt=Applet pour le glisser/d\u00E9poser de fichiers
+GML.galleries = Phototh\u00e8ques
+GML.applet.dnd.alt=Applet pour le glisser/d\u00e9poser de fichiers
 
 GML.user.type.A = Administrateur
 GML.user.type.D = Gestionnaire de domaine
 GML.user.type.K = Gestionnaire du Plan de Classement
 GML.user.type.U = Utilisateur
-GML.user.type.G = Invit\u00E9
+GML.user.type.G = Invit\u00e9
 
 GML.notification.send = Envoyer un message
 GML.notification.subject = Sujet
 GML.notification.message = Message
 
-GML.user.online = Connect\u00E9(e)
-GML.user.online.for = Connect\u00E9(e) depuis
-GML.user.offline = D\u00E9connect\u00E9(e)
+GML.user.online = Connect\u00e9(e)
+GML.user.online.for = Connect\u00e9(e) depuis
+GML.user.offline = D\u00e9connect\u00e9(e)
+
+GML.mandatory = Obligatoire
+
+GML.and = et
