--- a/config-core/src/main/config/properties/com/silverpeas/external/filesharing/multilang/fileSharingBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/external/filesharing/multilang/fileSharingBundle_fr.properties
@@ -57,7 +57,7 @@ fileSharing.sizeFile = Taille
 fileSharing.downloadLink = Lien vers le fichier \u00e0 t\u00e9l\u00e9charger
 fileSharing.ticketNotValid = Ce ticket n'est plus valide
 fileSharing.afficherCalendrier = afficher le calendrier
-fileSharing.maxValue = doit \u00eatre compris entre 1 et 100
+fileSharing.maxValue = doit \u00eatre compris entre
 fileSharing.shareFile = a choisi de partager le fichier&nbsp;:
 fileSharing.downloadFileHelp = Pour t\u00e9l\u00e9charger directement le fichier, <br/>faites un <b>clic droit > Enregistrer la cible sous ... </b>
-
+fileSharing.continuous = Permanent
