--- a/config-core/src/main/config/silvertrace/messages/adminMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/adminMessages_en.properties
@@ -95,6 +95,7 @@ admin.EX_ERR_GET_SPACE = Error getting a space
 admin.EX_ERR_GET_SPACE_FATHER_IDS = Error getting ids for father spaces
 admin.EX_ERR_GET_SPACE_NAMES = Error getting spaces from ids
 admin.EX_ERR_GET_SPACE_PROFILE = Error getting a space profile
+admin.EX_ERR_GET_SPACE_COMPONENTIDS = Error getting instanceIds for a space
 admin.EX_ERR_GET_USER = Error getting spaces from ids
 admin.EX_ERR_GET_USER_ALLOWED_SPACE_IDS = Error getting spaces accessible by the user
 admin.EX_ERR_GET_USER_AVAILABLE_COMPONENT_IDS = Error getting IDs of componants accessible by the utilisateur
