--- a/config-core/src/main/config/silvertrace/messages/adminMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/adminMessages_fr.properties
@@ -54,12 +54,6 @@ admin.EX_ERR_DELETE_USER = Problème dans la supression des gestionnaires d'un ut
 admin.EX_ERR_DOMAIN_NOT_FOUND = Impossible de trouver le domaine spécifié
 admin.EX_ERR_DOMAIN_DOES_NOT_SUPPORT = Fonction non supportee par ce domaine
 admin.EX_ERR_BOSS_NOT_FOUND = Le superieur hierarchique n'a pas ete trouve
-admin.EX_ERR_CASTOR_LOAD_XML_MAPPING = Castor : problème pendant la récupération de mappage
-admin.EX_ERR_CASTOR_MARSHALL_COMPONENT_DESCRIPTOR = Castor : problème pendant la conversion de paramètres
-admin.EX_ERR_CASTOR_UNMARSHALL_COMPONENT_DESCRIPTOR = Castor : problème pendant la reconversion de paramètres
-admin.EX_ERR_CASTOR_INVALID_XML_COMPONENT_DESCRIPTOR = Castor : le fichier XML du descriptif de composant n'est pas valable 
-admin.EX_ERR_CASTOR_LOAD_COMPONENT_DESCRIPTOR = Castor : problème pendant la lecture du fichier XML du descriptif de composant
-admin.EX_ERR_CASTOR_SAVE_COMPONENT_DESCRIPTOR = Castor : problème pendant l'écriture du fichier XML du descriptif de composant
 admin.EX_ERR_CHILD_USERS = Probleme lors de l'obtention des utilisateurs membres du groupe
 admin.EX_ERR_CHILD_GROUPS = Probleme lors de l'obtention des groupes membres du groupe
 
@@ -101,6 +95,7 @@ admin.EX_ERR_GET_SPACE = Erreur lors de l'obtention d'un espace
 admin.EX_ERR_GET_SPACE_FATHER_IDS = Erreur lors de l'obtention des ids des espaces pères
 admin.EX_ERR_GET_SPACE_NAMES = Erreur lors de l'obtention des espaces à partir des ids
 admin.EX_ERR_GET_SPACE_PROFILE = Erreur lors de l'obtention d'un profil d'espace
+admin.EX_ERR_GET_SPACE_COMPONENTIDS = Erreur lors de l'obtention des instanceId d'un espace
 admin.EX_ERR_GET_USER = Erreur lors de l'obtention des espaces à partir des ids
 admin.EX_ERR_GET_USER_ALLOWED_SPACE_IDS = Erreur lors de l'obtention des espaces accessibles par l'utilisateur
 admin.EX_ERR_GET_USER_AVAILABLE_COMPONENT_IDS = Erreur lors de l'obtention des ids des composants accessibles par l'utilisateur
@@ -202,7 +197,6 @@ admin.MSG_ERR_DELETE_COMPONENT = Erreur dans la suppression du composant
 admin.MSG_ERR_DELETE_PROFILE = Erreur dans la suppression du rôle
 admin.MSG_ERR_DELETE_SPACE = Erreur dans la suppression de l'espace
 admin.MSG_ERR_DELETE_SPACE_PROFILE = Erreur dans la suppression du rôle d'espace
-admin.MSG_ERR_EXCH55_REACH_NTRIS = Erreur lors de l'envoi de données au serveur NTRIS
 admin.MSG_ERR_GET_ALL_ADMIN_IDS = Erreur dans l'obtention de la liste des ids administrateurs
 admin.MSG_ERR_GET_ALL_COMPONENT_NAMES = Erreur dans l'obtention de la liste des noms de composants
 admin.MSG_ERR_GET_ALL_COMPONENTS = Erreur dans l'obtention de la liste des composants
@@ -236,8 +230,6 @@ admin.MSG_ERR_GET_USER_AVAILABLE_SUBSPACE_IDS = Erreur dans l'obtention des ids 
 admin.MSG_ERR_GET_USERPROFILE = Erreur dans l'obtention du profil utilisateur
 admin.MSG_ERR_GET_USERS_FOR_PROFILE_AND_COMPONENT = Erreur dans l'obtention des utilisateurs ayant le role donné pour l'instance donné
 admin.MSG_ERR_IS_SPACE_EXIST = Erreur lors du test d'existence de l'espace
-admin.MSG_ERR_LDAP_GENERAL = Erreur LDAP générale
-admin.MSG_ERR_LDAP_REFERRAL = Erreur LDAP (referral error)
 admin.MSG_ERR_MOVE_SPACE = Erreur dans le déplacement de l'espace
 admin.MSG_ERR_SYNCHRONIZE_DOMAIN = Erreur lors de la synchronization du domaine
 admin.MSG_ERR_SYNCHRONIZE_USER = Erreur lors de la synchronization de l'utilisateur
