--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/multilang/graphicElementFactoryBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/multilang/graphicElementFactoryBundle_en.properties
@@ -34,7 +34,7 @@ GEF.pagination.jumper = Page...
 GEF.progressMessage.message1 = Application being processed
 GEF.progressMessage.message2 = Please wait...
 
-GEF.operations.label = What do you do?
+GEF.operations.label = What do you want to do next?
 
 GEF.export.label = Export option
 GEF.export.option.csv=CSV
