--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
@@ -282,3 +282,7 @@ pdcPeas.group.tooltip.enable= Click to show only '{0}' results
 pdcPeas.group.tooltip.disable= Click to cancel '{0}' filter results
 
 pdcPeas.popularity = * views
+
+pdcPeas.external.search.unknown=External server
+pdcPeas.external.search.error=Please contact administrator. Configuration problem occured which not allowed to build external link.
+pdcPeas.error= Error
