Fix bug #1802. The message bundles in some portlet JSPs are now set with the favorite language of the user. The title of the default silverpeas portlets are now translated. The title of the portlets in the portlet-window-registry.xml is represented by a property key from which the actual localized title can be fetched. The localization of the title is performed by the WindowInvoker (that sets the title of each portlet)

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/portlet/multilang/portletBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/portlet/multilang/portletBundle_de.properties
@@ -27,11 +27,23 @@
 #
 
 fixColWidth = Die Breite festlegen
-addAColumn = Eine Spalte hinzuf\u00FCgen
-saveChanges = Ihre \u00C4nderungen speichern
-revert = Zur vorhergehenden Version zur\u00FCckkehren
+addAColumn = Eine Spalte hinzuf\u00fcgen
+saveChanges = Ihre \u00c4nderungen speichern
+revert = Zur vorhergehenden Version zur\u00fcckkehren
 colSizeFormat = Folgendes Format verwenden: "n%", "npx" oder "*"
 addToNewCol = Der neuen Spalte zuzuweisende Portlets
-addToCol = Der Spalte hinzuzuf\u00FCgende Portlets
+addToCol = Der Spalte hinzuzuf\u00fcgende Portlets
 portlet = Portlet
 desc = Beschreibung
+
+portlet.LastPublications.title = Neuere Publikationen
+portlet.FavoriteQueries.title = Meine bevorzugten Anforderungen
+portlet.NextEvents.title = Meine n\u00e4chsten Rendezvous
+portlet.silverpeas.MyTodosPortlet.title = Meine Tasks
+portlet.MyNotificationsPortlet.title = Meine Benachrichtigungen
+portlet.HelloSilverpeas.title = Willkommen
+portlet.MyBookmarks.title = Meinen Lesezeichen
+portlet.MyCheckOutFiles.title = Meine reservierten Dateien
+portlet.QuickInfos.title = Aktualit\u00e4t
+portlet.ComponentInstance.title = Eine Komponente
+portlet.IFrame.title = IFrame
