--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/portlet/multilang/portletBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/portlet/multilang/portletBundle_en.properties
@@ -34,3 +34,15 @@ addToNewCol = Portlets to add to a new column
 addToCol = Portlets to add to the column
 portlet = Portlet
 desc = Description
+
+portlet.LastPublications.title = Last publications
+portlet.FavoriteQueries.title = My favorite requests
+portlet.NextEvents.title = Mes next appointments
+portlet.silverpeas.MyTodosPortlet.title = My tasks
+portlet.MyNotificationsPortlet.title = My notifications
+portlet.HelloSilverpeas.title = Welcome
+portlet.MyBookmarks.title = My bookmarks
+portlet.MyCheckOutFiles.title = My locked files
+portlet.QuickInfos.title = News
+portlet.ComponentInstance.title = A component
+portlet.IFrame.title = IFrame
