Fixing English label about bug #1802

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/portlet/multilang/portletBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/portlet/multilang/portletBundle_en.properties
@@ -37,7 +37,7 @@ desc = Description
 
 portlet.LastPublications.title = Last publications
 portlet.FavoriteQueries.title = My favorite requests
-portlet.NextEvents.title = Mes next appointments
+portlet.NextEvents.title = My next appointments
 portlet.silverpeas.MyTodosPortlet.title = My tasks
 portlet.MyNotificationsPortlet.title = My notifications
 portlet.HelloSilverpeas.title = Welcome
