update feature #1324 Change external search display with localization label

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
@@ -272,3 +272,7 @@ pdcPeas.external.search.label=External server :
 pdcPeas.external.search.unknown=External server
 pdcPeas.external.search.error=Please contact administrator. Configuration problem occured which not allowed to build external link.
 pdcPeas.error= Error
+
+# Label linked to pdcPeasSettings.properties
+external.search.server.1.label=My external server 1
+external.search.server.2.label=My external server 2
