--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
@@ -281,3 +281,7 @@ pdcPeas.external.search.label=Serveur externe :
 pdcPeas.external.search.unknown=Serveur externe
 pdcPeas.external.search.error=Veuillez contacter l'administrateur du site. Un problème de configuration ne permet pas d'obtenir le lien d'accès à cette information externe.
 pdcPeas.error= Erreur
+
+# Label linked to pdcPeasSettings.properties
+external.search.server.1.label=Mon serveur externe 1
+external.search.server.2.label=Mon serveur externe 2
