fixing bug #1913 Checking field name (only letters and numbers)

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -180,7 +180,7 @@ GML.yes						        = Ja
 // Window title
 GML.popupTitle						= Silverpeas
 
-GML.trademark						= &copy; 2001-2009 Silverpeas - All Rights Reserved
+GML.trademark						= &copy; 2001-2011 Silverpeas - All Rights Reserved
 
 // Formulaire
 
@@ -234,6 +234,7 @@ GML.MustContainsPostDate = muss ein Datum enthalten, das nach dem heutigen Datum
 GML.MustContainsDateBetween1 = muss ein Datum enthalten zwischen dem
 GML.MustContainsDateBetween2 = und dem
 GML.MustContainsCorrectHour = muss eine korrekte Uhrzeit enthalten
+GML.MustContainsLettersAndDigitsOnly = must be composed only of letters and numbers
 
 //Plan de classement
 GML.PDC = Klassierungsplan
