--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -176,7 +176,7 @@ GML.yes							= Yes
 // window title
 GML.popupTitle						= ___/ Silverpeas&#8482; - Collaborative Portal Organizer \_________________________________________
 
-GML.trademark						= &copy; 2001-2010 <a href="http://www.silverpeas.com" target="_blank">Silverpeas</a> - All rights reserved
+GML.trademark						= &copy; 2001-2011 <a href="http://www.silverpeas.com" target="_blank">Silverpeas</a> - All rights reserved
 
 // Formulaire
 GML.thefield						= The field
@@ -232,6 +232,7 @@ GML.MustContainsPostDate = must contain a post date
 GML.MustContainsDateBetween1 = must contain a between
 GML.MustContainsDateBetween2 = and
 GML.MustContainsCorrectHour = must contain a correct hour
+GML.MustContainsLettersAndDigitsOnly = must be composed only of letters and numbers
 
 #Plan de classement
 GML.PDC = Categorization
