fixing bug #1895 Now, in XML templates, name of files uploaded through image, file and video fields are checked. If filename > 100 characters a message alerts user and form is not submitted.

--- a/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_de.properties
@@ -98,3 +98,6 @@ Blue = Blau
 Fuchsia = Pink
 Turquoise = T\u00FCrkis
 White = Weiss
+
+form.Extra = Weitere Informationen
+form.field.file.toolong = muss eine Datei, deren Name darf nicht länger als 100 Zeichen sein.
