--- a/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_en.properties
@@ -99,3 +99,4 @@ Turquoise = Turquoise
 White = White
 
 form.Extra = Additional information
+form.field.file.toolong = must be a file whose name must not exceed 100 characters.
