--- a/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_fr.properties
@@ -99,3 +99,4 @@ Turquoise = Turquoise
 White = Blanc
 
 form.Extra = Informations complémentaires
+form.field.file.toolong = doit être un fichier dont le nom ne doit pas excéder 100 caractères.
