fixing bug #1923 Format of German dates are correctly supported. On this occasion, javascript utility have been improved.

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/date/multilang/date_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/date/multilang/date_de.properties
@@ -23,8 +23,8 @@
 #
 
 // format
-dateInputFormat = dd/MM/yyyy
-dateOutputFormat = dd/MM/yyyy
+dateInputFormat = dd.MM.yyyy
+dateOutputFormat = dd.MM.yyyy
 hourOutputFormat = HH:mm
 
 // jour
