closing feature #2062 using more appropriate English terms

--- a/config-core/src/main/config/properties/com/silverpeas/importExportPeas/multilang/importExportPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/importExportPeas/multilang/importExportPeasBundle_en.properties
@@ -47,7 +47,7 @@ importExportPeas.ImportError2			= Non-existent or inaccessible file
 importExportPeas.ImportError3			= Non-existent or inaccessible directory
 importExportPeas.ImportError4			= incorrect meta data
 importExportPeas.ImportError5			= Non-existent topic
-importExportPeas.ImportError6			= incorrect axis (Classification)
+importExportPeas.ImportError6			= incorrect topic (Classification)
 importExportPeas.ImportError7			= incorrect value (Classification)
 importExportPeas.ImportError8			= incorrect classifying (Classification)
 
