--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
@@ -21,7 +21,7 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-JSPP.BackToMainSpacePage = Back to Workspace main page
+JSPP.BackToMainSpacePage = Back to workspace homepage
 
 JSPP.homepageType = Type of startup page 
 
@@ -72,7 +72,7 @@ JSPP.SpacePanelCreateTitle = Create a space
 JSPP.SpacePanelModifyTitle = Modify a space
 JSPP.SpacePanelDeleteTitle = Delete a space
 
-JSPP.Choose = Choose...
+JSPP.Choose = Select...
 JSPP.ModifyStartPage = Modify the homepage
 
 //form
