--- a/config-core/src/main/config/properties/com/silverpeas/pdcSubscription/multilang/pdcsubscription_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/pdcSubscription/multilang/pdcsubscription_en.properties
@@ -28,10 +28,10 @@ Subscription = Center of Interest:
 Service  = KM Service: 
 Date     = Date: 
 URL      = Link: 
-Axis     = Axis: 
+Axis     = Topic: 
 notification.delete.title = Your center of interest has been removed
-deleteOnAxisMessage = An axis of your Center of Interest has been removed. The Center of Interest has been removed too.
-deleteOnValueMessage = A value of your Center of Interest has been removed. The Center of Interest has been removed too.
+deleteOnAxisMessage = A topic of your interest center has been removed. The interest center has been removed too.
+deleteOnValueMessage = A value of your interest center has been removed. The interest center has been removed too.
 DocumentName = Document: 
 Path = Path: 
 pdcClassification = My Center of Interest.
