--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_en.properties
@@ -6,7 +6,7 @@ newsFeed.scope.display = Display :
 newsFeed.scope.all = All
 newsFeed.scope.publication = Publications
 newsFeed.scope.event = Events
-newsFeed.scope.photo = Images
+newsFeed.scope.photo = Pictures
 newsFeed.scope.relationship = Relationship
 newsFeed.scope.status = Status
 
