--- a/config-core/src/main/config/properties/com/silverpeas/thesaurusPeas/multilang/thesaurusPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/thesaurusPeas/multilang/thesaurusPeasBundle_en.properties
@@ -41,8 +41,8 @@ thesaurus.validateSynonyms = Validate synonyms
 
 thesaurus.vocabulaires = Glossaries
 thesaurus.vocabulaire = Glossary
-thesaurus.axes = Axis
-thesaurus.axe = Axis
+thesaurus.axes = Topics
+thesaurus.axe = Topic
 thesaurus.termes = Terms
 thesaurus.terme = Term
 
@@ -89,4 +89,4 @@ thesaurus.MessageSuppressionsSyno = Do you really want to delete the selected sy
 thesaurus.MessageSelectVoca = Please select a glossary
 thesaurus.MessageSelectTerm = Please select a term
 thesaurus.MessageSelectVocaTerm = Please select a glossary and a term
-thesaurus.MessageSelectAxis = Please select an axis first
+thesaurus.MessageSelectAxis = Please select a topic first
