--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_en.properties
@@ -25,7 +25,7 @@
 #  Messages used in notification Manager
 #
 
-domainName=Notification Manager
+domainName=Notification manager
 
 channelType1=e-mail
 channelType2=SMS
@@ -34,7 +34,7 @@ channelType4=SilverMail
 channelType5=Deletion
 
 defaultAddressPOPUP=<Pop-up>
-defaultAddressSILVERMAIL=<Notification box>
+defaultAddressSILVERMAIL=<Inbox>
 defaultAddressREMOVE=<Automatic deletion>
 defaultAddressSPMAIL=<Default messaging>
 defaultAddressSERVER=<Server>
