--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/silvermail/multilang/silvermail_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/silvermail/multilang/silvermail_en.properties
@@ -47,10 +47,10 @@ LireNotification = Notification box
 Notifier = Send a notification
 DeleteAllNotif = Remove all messages
 ConfirmDeleteAllNotif = Do you really want to delete all messages ?
-SendedUserNotifications = Sended notifications
+SendedUserNotifications = Sent notifications
 DeleteAllSendedNotif = Remove all messages
 ConfirmDeleteAllSendedNotif =  Do you really want to delete all messages ?
-NameOfReceivers = This message has been sent to : 
+NameOfReceivers = This message have been sent to : 
 UserNotification = User Notification
 UnknownSource = Unknown source
 NameOfGroupReceivers = And groups : 
