--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_en.properties
@@ -22,12 +22,12 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-operationPane_addadress = Add a protocol
+operationPane_addadress = Add a channel
 operationPane_paramnotif = Edit guidelines
 operationPane_addguideline = New guideline
 
 arrayPane_Default = Default
-arrayPane_Nom = Protocol
+arrayPane_Nom = Channel
 arrayPane_Type = Type
 arrayPane_Usage = Use
 arrayPane_Adresse = Contact
@@ -36,9 +36,9 @@ arrayPane_Operations = Operations
 iconPane_Default = Set by default
 iconPane_Test = Test
 
-browseBar_Path2 = Add a notification protocol
+browseBar_Path2 = Add a notification channel
 browseBar_Path3 = Guidelines
-browseBar_Path4 = Modify the notification protocol
+browseBar_Path4 = Modify the notification channel
 
 type= Type
 usage = Use
@@ -56,10 +56,10 @@ TestSMTPExplanation = You have just tested the sending of a notification in mail
 
 
 MesNotifications = My notifications
-ParametrerNotification = Parameter
-LireNotification = Notification box
-SendedUserNotifications = Sended notifications
+ParametrerNotification = Settings
+LireNotification = Inbox
+SendedUserNotifications = Sent
 
 Notifier = Send a notification
-MessageSuppressionCanal = Do you really want to delete this protocol?
+MessageSuppressionCanal = Do you really want to delete this channel?
 MessageSuppressionRegle = Do you really want to delete this guideline?
