--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_en.properties
@@ -95,15 +95,15 @@ silverStatisticsPeas.exportOptions	= Export option
 silverStatisticsPeas.export.option.csv=CSV
 
 silverStatisticsPeas.access.space = Spaces access
-silverStatisticsPeas.access.pdc = Axis access
+silverStatisticsPeas.access.pdc = Topics access
 
-silverStatisticsPeas.pdc.axis= Axis statistics
-silverStatisticsPeas.pdc.cross= Cross axis statistics
+silverStatisticsPeas.pdc.axis= Topics statistics
+silverStatisticsPeas.pdc.cross= Cross topics statistics
 
-silverStatisticsPeas.pdc.th.axis= Axis
+silverStatisticsPeas.pdc.th.axis= Topic
 silverStatisticsPeas.pdc.th.access= Access number
-silverStatisticsPeas.pdc.cross.axis.first=First axis
-silverStatisticsPeas.pdc.cross.axis.second=Second axis
-silverStatisticsPeas.pdc.cross.select=Select axis
-silverStatisticsPeas.pdc.error.select=Pleas select two axes
-silverStatisticsPeas.pdc.error.same=You must not select the same axis.
+silverStatisticsPeas.pdc.cross.axis.first=First topic
+silverStatisticsPeas.pdc.cross.axis.second=Second topic
+silverStatisticsPeas.pdc.cross.select=Select topic
+silverStatisticsPeas.pdc.error.select=Pleas select two topics
+silverStatisticsPeas.pdc.error.same=You must not select the same topics.
