--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/wysiwyg/multilang/wysiwygBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/wysiwyg/multilang/wysiwygBundle_en.properties
@@ -45,7 +45,7 @@ RequiredField = Required
 UploadTitle = File upload
 Valider = Ok
 Annuler = Cancel
-DynamicValues = Choose a keyword
+DynamicValues = Select a keyword
 storageFile.select.title = Files stores
 storageFile.home.title = Attachment link management
 storageFile.home.description = Please use the left side menu to display attachments.
