--- a/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_en.properties
@@ -29,9 +29,9 @@ AdministrationPortlet = Portlet administration
 AdministrationPdc = Filing system
 AdministrationStat = Statistics
 
-SpaceEntreprise = Company Workspace
-SpaceCollaboration = Collaborative Workspaces
-SpacePersonal = Personal Workspace
+SpaceEntreprise = Company workspace
+SpaceCollaboration = Collaborative workspaces
+SpacePersonal = Personal workspace
 Component = Service
 AxisCollaboration = Categories of
 AxisEmpty = no PDC
