--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -269,7 +269,7 @@ GML.ExportCSV = Export CSV
 GML.DragNDropExpand = Quick upload...
 GML.DragNDropCollapse = Close
 
-GML.personalSpace = Personal space
+GML.personalSpace = Personal workspace
 GML.linkTo = Link to
 
 GML.or = or
