--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
@@ -25,27 +25,27 @@ pdcPeas.pdc                            = Classification Scheme
 pdcPeas.pdcDefinition                  = Definition
 pdcPeas.pdcConsultation                = Consultation
 
-pdcPeas.createAxis                     = Create an axis
-pdcPeas.viewAxis                       = View axis
-pdcPeas.editAxis                       = Modify axis
+pdcPeas.createAxis                     = Create a topic
+pdcPeas.viewAxis                       = View topic
+pdcPeas.editAxis                       = Modify topic
 pdcPeas.editValue                      = Modify value
 pdcPeas.updateValue                    = Update value
 pdcPeas.moveValue                      = Move value
 pdcPeas.editRights		       = Manage rights
-pdcPeas.noRights		       = You have no permission on this axis.
+pdcPeas.noRights		       = You have no permission on this topic.
 
 pdcPeas.value                          = Value
 pdcPeas.daughterValue                  = Daughter value
 pdcPeas.motherValue                    = Mother value
 pdcPeas.currentValue                   = Current value
 pdcPeas.baseValue                      = Base value
-pdcPeas.axisValue                      = Axis values
+pdcPeas.axisValue                      = Topic values
 pdcPeas.sistersValue                   = Sister Values
 
-pdcPeas.allAxis                        = All axis
-pdcPeas.brothersAxis                   = Brother axis
+pdcPeas.allAxis                        = All topics
+pdcPeas.brothersAxis                   = Brother topic
 
-pdcPeas.deleteAxis                     = Delete selected axis
+pdcPeas.deleteAxis                     = Delete selected topic
 pdcPeas.deleteValue                    = Delete the value
 pdcPeas.deleteValueImpossibleBegin     = This value cannot be deleted because the sister value
 pdcPeas.deleteValueImpossibleEnd       = is named like a daughter value
@@ -65,19 +65,19 @@ pdcPeas.managers		       = Managers
 pdcPeas.createDaughterValue            = Create a daughter value
 pdcPeas.insertMotherValue              = Insert a mother value
 
-pdcPeas.axisUse                        = Use the axis
-pdcPeas.axisUtilizationParameter       = Set up the axis utilization
-pdcPeas.axisUse2                       = Axis utilization
-pdcPeas.axisName                       = Axis name
+pdcPeas.axisUse                        = Use the topic
+pdcPeas.axisUtilizationParameter       = Setup the topic utilization
+pdcPeas.axisUse2                       = Topic utilization
+pdcPeas.axisName                       = Topic name
 pdcPeas.axisOperation                  = Operation
 pdcPeas.primary                        = Primary
-pdcPeas.primaryAxis                    = Primary axis
+pdcPeas.primaryAxis                    = Primary topics
 pdcPeas.secondary                      = Secondary
-pdcPeas.secondaryAxis                  = Secondary axis
+pdcPeas.secondaryAxis                  = Secondary topics
 pdcPeas.activateThesaurus              = Activate the thesaurus
 pdcPeas.desactivateThesaurus           = Unactivate the thesaurus
-pdcPeas.showSecondaryAxis	       = Display secondary axis
-pdcPeas.hideSecondaryAxis	       = Hide secondary axis
+pdcPeas.showSecondaryAxis	       = Display secondary topics
+pdcPeas.hideSecondaryAxis	       = Hide secondary topics
 
 pdcPeas.classifyPublication            = Classifying
 pdcPeas.classifyAdd                    = Create a new position
@@ -85,7 +85,7 @@ pdcPeas.classifyUpdate                 = Modify a position
 pdcPeas.classifyDelete                 = Delete selected position(s)
 pdcPeas.position                       = Position
 pdcPeas.noPosition                     = No position
-pdcPeas.rootValueNotAllowed	       = Root value is not authorized on following axis
+pdcPeas.rootValueNotAllowed	       = Root value is not authorized on following topic
 pdcPeas.addPosition                    = Add a position
 pdcPeas.editPosition                   = Edit the position
 pdcPeas.deletePosition                 = Delete the position
@@ -97,18 +97,18 @@ pdcPeas.variants                       = Variant
 pdcPeas.notVariants                    = Invariant
 pdcPeas.optional                       = Optional
 
-pdcPeas.axisAlreadyExist               = A same axis name already exists!
+pdcPeas.axisAlreadyExist               = A same topic name already exists!
 pdcPeas.valueAlreadyExist              = A same value name already exists!
-pdcPeas.axisCantMove		       = An axis cannot be moved!
-pdcPeas.maximumAxisReach               = The maximum number of axis has been reached!
+pdcPeas.axisCantMove		       = A topic cannot be moved!
+pdcPeas.maximumAxisReach               = The maximum number of topics has been reached!
 
 pdcPeas.emptyMotherName                = The field ' Mother value ' is required
 pdcPeas.emptyDaughterName              = The field ' Sister value ' is required
 pdcPeas.emptyName                      = The field ' Name ' is required
 
 pdcPeas.paramPdcPeas                   = Classification settings
-pdcPeas.paramChooseAxis                = Select an axis to be used
-pdcPeas.selectAxis                     = Select at least one axis.
+pdcPeas.paramChooseAxis                = Select a topic to be used
+pdcPeas.selectAxis                     = Select at least one topic.
 pdcPeas.errorMessage                   = An ascending or downward value with the selected one was already selected as the basic value
 pdcPeas.positionExist                  = You cannot change your basic value.
 pdcPeas.paramUsedAxis		       = Settings
@@ -117,12 +117,12 @@ pdcPeas.Errors                         = Errors:
 pdcPeas.mySearchContext                = My search
 pdcPeas.modifySearchContext            = Modify the search
 pdcPeas.searchResult                   = Display the search results
-pdcPeas.addSearchContext               = Add this axis to the search context
-pdcPeas.supprAxisFromContext           = Remove selected axis from search context
+pdcPeas.addSearchContext               = Add this topic to the search context
+pdcPeas.supprAxisFromContext           = Remove selected topic from search context
 pdcPeas.documentConsult                = Consult the document
 
 //recherche
-pdcPeas.requestSelect =  Choose Request:
+pdcPeas.requestSelect =  Select a request:
 pdcPeas.SearchFind = Keywords:
 pdcPeas.NbResultSearch = Number of results to display: 
 pdcPeas.SortResultSearch = sorting by:
@@ -198,9 +198,9 @@ pdcSubscription.path = My centers of interest
 pdcSubscription.newSubsription = New center of interest
 pdcSubscription.Name = Name
 pdcSubscription.Name.NotEmpty = The 'Name' field must be filled
-pdcSubscription.Values.NotEmpty = Please select at least one axis
+pdcSubscription.Values.NotEmpty = Please select at least one topic
 pdcSubscription.ok = Ok
-pdcSubscription.selection = Selected axis
+pdcSubscription.selection = Selected topic
 
 pdcPeas.docsNumber = Number of documents
 
@@ -252,7 +252,7 @@ pdcPeas.helpCol3Content4 =
 
 pdcPeas.openUserPanelPeas           = Access to user panel
 
-pdcPeas.classifyImpossible = Classification is not possible for the moment. No classification axis has been defined by the manager.
+pdcPeas.classifyImpossible = Classification is not possible for the moment. No classification topics has been defined by the manager.
 
 pdcPeas.In = In 
 pdcPeas.ToExport = Export selected documents
@@ -267,9 +267,9 @@ pdcPeas.Template = Form
 
 pdcPeas.inProgress = Searching!<br/>Please wait...
 
-pdcPeas.choiceForm = Please choose a form
+pdcPeas.choiceForm = Please select a form
 
-pdcPeas.Axe = Axis
+pdcPeas.Axe = Topic
 
 pdcPeas.selectAll=Select all
 
