--- a/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_de.properties
@@ -40,6 +40,7 @@ JTOOLS = Tools
 JDP = Benutzer und Gruppen
 JSPP = Bereichverwaltung
 JRP = Profil
+JSP = Suche
 JMAP = Wartung
 JST = SilverTrace-Konsole
 JTD = Formulare
