--- a/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_en.properties
@@ -37,6 +37,7 @@ JTOOLS = Tools
 JDP = Users & groups
 JSPP = Workspace
 JRP = Identity
+JSP = Search
 JMAP = Maintenance
 JST = SilverTrace Console
 JTD = Templates
