--- a/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_fr.properties
@@ -37,6 +37,7 @@ JTOOLS = Outils
 JDP = Utilisateurs & groupes
 JSPP = Gestion d'espaces
 JRP = Profil
+JSP = Recherche
 JMAP = Maintenance
 JST = Console SilverTrace
 JTD = Formulaires
